--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## Директории",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
